# cookiecutter-pyproject

./: LICENSE  README.rst  cookiecutter.json
{{ cookiecutter.project_name }}/: .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .pylintrc  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_name }}/.circleci/: config.yml
{{ cookiecutter.project_name }}/tests/: test_{{ cookiecutter.project_name }}.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/: __init__.py  __main__.py  __version__.py
