[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:{{ cookiecutter.project_name }}/__version__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[options]

{%- if cookiecutter.support_python2 != "n" %}
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
{%- if cookiecutter.minimum_python_version|float >= 3.7 %} ,!=3.6.* {%- endif %}
{%- else %}
python_requires = >={{ cookiecutter.minimum_python_version }}
{%- endif %}


[bdist_wheel]
universal = 1
